--- a/stylesheets/sass/_menus.scss
+++ b/stylesheets/sass/_menus.scss
@@ -118,8 +118,8 @@
     @include query($mobile-1) {
       &.expanded {
         top: 50px;
-        left: -5px;
-        right: -5px;
+        left: 0;
+        right: 0;
         min-width: 0;
         margin-bottom: 40px;
         @include no-box-shadow;
